# infrared-rs

./: Cargo.toml
src/: errors.rs  hardware.rs  lib.rs  scanner.rs
