[package]
name = "infrared-rs"
version = "0.1.0"
description = "Rust crate used for receiving signals from infrared remote controls (Ported from Go)"
license = "GPL-2.0-only"
edition = "2021"
repository = "https://github.com/smarthome-go/infrared-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"
