[package]
name = "infrared-rs"
version = "0.3.1"
description = "Rust crate used for receiving signals from infrared remote controls (Ported from Go)"
license = "GPL-2.0-only"
edition = "2021"
repository = "https://github.com/smarthome-go/infrared-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = "0.5.1"
rppal = "0.14.1"
spin_sleep = "1.1.1"
